created placeholders in index, added cdn links, added firebase db to js file, and placeholder

--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Crimino</title>
+    <link rel="shortcut icon" type="image/png" href="./assets/images/handcuff_icon.png">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Compiled and minified CSS -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
 </head>
+
 <body>
+    <!-- This is the header for the logo -->
+    <div class="header">
+
+    </div>
+
+    <!-- This is the side bar for the search criteria -->
+    <div class="sidebar searchArea">
+
+    </div>
+
+    <!-- this is the area for the map -->
+    <div class="mapArea">
+
+    </div>
+
+    <!-- this is where the table for the results will display -->
+    <div class="results">
+
+    </div>
+    <!-- placeholder for previous -->
+    <div class="previousSearches">
+
+    </div>
+
+     <!-- jquery CDN -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Compiled and minified JavaScript for materialize-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- link for Firebase DB -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
+    <!-- local JS file -->
+    <script src="./assets/javascript/logic.js"></script>
     
 </body>
 </html>
