--- a/eventdetails.html
+++ b/eventdetails.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/images/smileyIcon.png">
     <!-- Compiled and minified Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
