form validiation and reset working, updated database call to include an event child node

--- a/eventdetails.html
+++ b/eventdetails.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/images/smileyIcon.png">
     <!-- Compiled and minified Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
@@ -17,7 +17,7 @@
     <nav>
         <div class="nav-wrapper grey darken-2">
             <div class="container">
-                <a href="./index.html" class="brand-logo">Event Dash</a>
+                <a href="./index.html" class="brand-logo"><i class="material-icons" style="font-size:36px">event_available</i> Event Dash</a>
                 <!-- Modal Trigger...opens the Add Event modal-->
                 <!-- <button data-target="addEvent" class="btn modal-trigger right" id="addEventButton">Add Event</button> -->
             </div>
