--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                     <!-- form buttons -->
                     <button type="submit" form="addEventForm" class="modal-close btn waves-effect waves-light cyan" id="submitEvent" name="submitEvent">Submit</button>
-                    <a class="modal-close waves-effect waves-cyan btn-flat">Cancel</a>
+                    <a class="modal-close waves-effect waves-cyan btn-flat" id="cancelButton">Cancel</a>
                 </form>
             </div>
         </div>
@@ -98,7 +98,7 @@
     <nav>
         <div class="nav-wrapper grey darken-2">
             <div class="container">
-                <a href="#" class="brand-logo">Event Dash</a>
+                <a href="#" class="brand-logo"><i class="material-icons" style="font-size:36px">event_available</i> Event Dash</a>
                 <!-- Modal Trigger...opens the Add Event modal-->
                 <button data-target="addEvent" class="btn modal-trigger right cyan" id="addEventButton">Add Event</button>
             </div>
