added images array for top of card and will randomly assign an image from a function call, but refreshes eat time. updated zip field in form to be numberic not text

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <span class="helper-text" data-error="Required"></span>
                         </div>
                         <div class="input-field col s2">
-                                <input id="zip" type="text" class="validate" required="" aria-required="true">
+                                <input id="zip" type="number" class="validate" required="" aria-required="true">
                                 <label for="zip">Zip</label>
                                 <span class="helper-text" data-error="Required"></span>
                         </div>
