--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <!-- button to tweet user's followers -->
                     <div class="row">
                         <div class="col s4">
-                            <a href="https://twitter.com/intent/tweet?button_hashtag=EventDash&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-size="large" data-text="Hey everyone come to my Event, go to the Link!" data-url="https://chancy23.github.io/Group-Project-One/" data-show-count="false">Tweet #EventDash</a>
+                            <a href="https://twitter.com/intent/tweet?button_hashtag=EventDash&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-size="large" data-text="Hey everyone come to my event, details here:" data-url="https://chancy23.github.io/Group-Project-One/" data-show-count="false">Tweet #EventDash</a>
                         </div>
                     </div>
 
